tested various data configurations.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
@@ -19,11 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['US-AK' 'US-DC' 'US-DE' 'US-HI' 'US-ID' 'US-ME' 'US-MT' 'US-ND' 'US-NE'\n",
+      " 'US-NH' 'US-NM' 'US-RI' 'US-SD' 'US-VT' 'US-WV' 'US-WY']\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -36,16 +44,17 @@
    "source": [
     "from data import Data\n",
     "data = Data()\n",
-    "data.keep_15_symptoms()\n",
-    "data.filter_low_data_regions()\n",
-    "# data.d = data.d[data.d.loc[:,'date'] >= \"2020-03-23\"]\n",
+    "# data.filter_no_covid_cases()\n",
+    "# data.keep_15_symptoms()\n",
+    "# data.filter_low_data_regions(threshold=0.15)\n",
     "data.fill_na(0)\n",
-    "dat = data.d"
+    "dat = data.d\n",
+    "print(dat['open_covid_region_code'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def region_validation_splits(d, n_splits=5):\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def time_validation_split(d, split_date):\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def calc_MSE(model, validation_sets):\n",
@@ -114,18 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best K = 3, MSE = 1796.527890238417\n"
+      "best K = 81, MSE = 4466.252648224357\n"
      ]
     }
    ],
    "source": [
-    "n_neighbors = np.zeros(150)\n",
+    "n_neighbors = np.zeros(100)\n",
     "for i in range(n_neighbors.shape[0]):\n",
     "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
     "    n_neighbors[i] = calc_MSE(neigh, region_validation_splits(dat, n_splits=5))\n",
@@ -141,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best min_samples_leaf = 62, MSE = 2010.820581590875\n"
+      "best min_samples_leaf = 45, MSE = 4080.3749903676476\n"
      ]
     }
    ],
@@ -168,14 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best K = 43, MSE = 1178.432778979629\n"
+     ]
+    }
+   ],
    "source": [
-    "n_neighbors = np.zeros(150)\n",
+    "n_neighbors = np.zeros(100)\n",
     "for i in range(n_neighbors.shape[0]):\n",
     "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "    split = time_validation_split(dat, \"2020-08-10\")\n",
-    "    n_neighbors[i] = calc_MSE(neigh, split)\n",
+    "    n_neighbors[i] = calc_MSE(neigh, time_validation_split(dat, \"2020-08-10\"))\n",
     "best = np.argmin(n_neighbors) + 1\n",
     "print(f\"best K = {best}, MSE = {n_neighbors[best - 1]}\")"
    ],
@@ -188,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best K = 9, MSE = 1693.5485466555524\n"
+      "best min_samples_leaf = 30, MSE = 1234.4315375578458\n"
      ]
     }
    ],
