--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -164,6 +164,187 @@
     "mean squared error."
    ],
    "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "n_neighbors = np.zeros(100)\n",
+    "for i in range(n_neighbors.shape[0]):\n",
+    "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
+    "    n_neighbors[i] = calc_MSE(neigh, region_validation_splits(dat, n_splits=5))\n",
+    "best = np.argmin(n_neighbors) + 1\n",
+    "print(f\"best K = {best}, MSE = {n_neighbors[best - 1]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Regression Tree performance on region cross validation. It uses minimum samples per leaf\n",
+    "as a hyperparameter. This outputs the best min_sample_leaf and it's corresponding\n",
+    "mean squared error."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "leaf_samples = np.zeros(100)\n",
+    "for i in range(leaf_samples.shape[0]):\n",
+    "    tree = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
+    "    leaf_samples[i] = calc_MSE(tree, region_validation_splits(dat, n_splits=5))\n",
+    "best = np.argmin(leaf_samples) + 1\n",
+    "print(f\"best min_samples_leaf = {best}, MSE = {leaf_samples[best - 1]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "KNN performance on time split validation. This outputs the best K and it's corresponding\n",
+    "mean squared error."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "n_neighbors = np.zeros(200)\n",
+    "for i in range(n_neighbors.shape[0]):\n",
+    "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
+    "    n_neighbors[i] = calc_MSE(neigh, time_validation_split(dat, \"2020-08-10\"))\n",
+    "best = np.argmin(n_neighbors) + 1\n",
+    "print(f\"best K = {best}, MSE = {n_neighbors[best - 1]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Regression Tree performance on time split validation. It uses minimum samples per leaf\n",
+    "as a hyperparameter. This outputs the best min_sample_leaf and it's corresponding\n",
+    "mean squared error."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "leaf_samples = np.zeros(200)\n",
+    "for i in range(leaf_samples.shape[0]):\n",
+    "    tree = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
+    "    leaf_samples[i] = calc_MSE(tree, time_validation_split(dat, \"2020-08-10\"))\n",
+    "best = np.argmin(leaf_samples) + 1\n",
+    "print(f\"best min_samples_leaf = {best}, MSE = {leaf_samples[best - 1]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This is an attempt at using a model on the PCA-reduced dataset and ordinary 5-fold\n",
+    "cross validation is used."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pca = PCAPlotting(dat)\n",
+    "pca.reduce_dimensionality(new_dimension=2)\n",
+    "pca.add_hospitalized_new()\n",
+    "X = pca.reduced_data[:,:-1]\n",
+    "y = pca.reduced_data[:,-1]\n",
+    "kf = KFold(n_splits=5)\n",
+    "\n",
+    "mse = np.zeros(200)\n",
+    "for i in range(mse.shape[0]):\n",
+    "    sqr_err = 0\n",
+    "    n_test = 0\n",
+    "    for train_i, test_i in kf.split(X):\n",
+    "        # model = KNeighborsRegressor(n_neighbors=i+1)\n",
+    "        model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
+    "        model.fit(X[train_i], y[train_i])\n",
+    "        pred = model.predict(X[test_i])\n",
+    "        sqr_err += np.sum((pred - y[test_i]) ** 2)\n",
+    "        n_test += test_i.shape[0]\n",
+    "    mse[i] = sqr_err / n_test\n",
+    "best = np.argmin(mse) + 1\n",
+    "print(f\"best = {best}, MSE = {mse[best - 1]}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "pca = PCAPlotting(dat)\n",
+    "pca.reduce_dimensionality(new_dimension=2)\n",
+    "pca.add_hospitalized_new()\n",
+    "X = pca.reduced_data[:,:-1]\n",
+    "y = pca.reduced_data[:,-1]\n",
+    "kf = KFold(n_splits=5)\n",
+    "\n",
+    "mse = np.zeros(200)\n",
+    "for i in range(mse.shape[0]):\n",
+    "    sqr_err = 0\n",
+    "    n_test = 0\n",
+    "    for train_i, test_i in kf.split(X):\n",
+    "        # model = KNeighborsRegressor(n_neighbors=i+1)\n",
+    "        model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
+    "        model.fit(X[train_i], y[train_i])\n",
+    "        pred = model.predict(X[test_i])\n",
+    "        sqr_err += np.sum((pred - y[test_i]) ** 2)\n",
+    "        n_test += test_i.shape[0]\n",
+    "    mse[i] = sqr_err / n_test\n",
+    "best = np.argmin(mse) + 1\n",
+    "print(f\"best = {best}, MSE = {mse[best - 1]}\")\n"
+   ],
+   "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
