--- a/models.ipynb
+++ b/models.ipynb
@@ -22,29 +22,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "1. import merged data\n",
     "2. remove regions that contain >= 85% of data being NaN\n",
     "3. fill all NaNs with 0s"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['US-AK' 'US-DC' 'US-DE' 'US-MT' 'US-ND' 'US-RI' 'US-SD' 'US-VT' 'US-WV'\n",
+      " 'US-WY']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\julian\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3417: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "from data import Data\n",
     "data = Data()\n",
     "data.filter_low_data_regions(threshold=0.15)\n",
     "data.fill_na(0)\n",
-    "dat = data.d\n",
-    "print(dat['open_covid_region_code'].unique())"
+    "dat = data.d"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,15 +72,12 @@
     "`region_validation_splits` generates test splits grouped by regions"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def region_validation_splits(d, n_splits=5):\n",
@@ -97,15 +107,12 @@
     "`time_validation_split` splits the data into two sets: before and after a given time."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def time_validation_split(d, split_date):\n",
@@ -130,15 +137,12 @@
     "Mean Squared Error"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def calc_MSE(model, validation_sets):\n",
@@ -170,8 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best K = 100, MSE = 2392.578654473684\n"
+     ]
+    }
+   ],
    "source": [
     "n_neighbors = np.zeros(100)\n",
     "for i in range(n_neighbors.shape[0]):\n",
@@ -200,8 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best min_samples_leaf = 29, MSE = 2277.3073756455565\n"
+     ]
+    }
+   ],
    "source": [
     "leaf_samples = np.zeros(100)\n",
     "for i in range(leaf_samples.shape[0]):\n",
@@ -229,8 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best K = 1, MSE = 972.1166666666667\n"
+     ]
+    }
+   ],
    "source": [
     "n_neighbors = np.zeros(200)\n",
     "for i in range(n_neighbors.shape[0]):\n",
@@ -259,8 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best min_samples_leaf = 3, MSE = 1021.7125046296296\n"
+     ]
+    }
+   ],
    "source": [
     "leaf_samples = np.zeros(200)\n",
     "for i in range(leaf_samples.shape[0]):\n",
@@ -288,8 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best = 153, MSE = 2177.7346649930746\n"
+     ]
+    }
+   ],
    "source": [
     "pca = PCAPlotting(dat)\n",
     "pca.reduce_dimensionality(new_dimension=2)\n",
@@ -324,18 +368,15 @@
    "cell_type": "markdown",
    "source": [
     "The following charts show why the MSE is so high. similar features cluster together but\n",
-    "their corresponding labels (z-axis) have high variance. "
+    "their corresponding labels (z-axis) have high variance."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stderr",
@@ -388,236 +429,6 @@
     "kmeans.plot_3d_kmeans(view_init=(30, 30))\n",
     "kmeans.plot_3d_kmeans(view_init=(0, 0))\n",
     "kmeans.plot_3d_kmeans(view_init=(0, 90))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "pca = PCAPlotting(dat)\n",
-    "pca.reduce_dimensionality(new_dimension=2)\n",
-    "pca.add_hospitalized_new()\n",
-    "X = pca.reduced_data[:,:-1]\n",
-    "y = pca.reduced_data[:,-1]\n",
-    "kf = KFold(n_splits=5)\n",
-    "\n",
-    "mse = np.zeros(200)\n",
-    "for i in range(mse.shape[0]):\n",
-    "    sqr_err = 0\n",
-    "    n_test = 0\n",
-    "    for train_i, test_i in kf.split(X):\n",
-    "        # model = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "        model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
-    "        model.fit(X[train_i], y[train_i])\n",
-    "        pred = model.predict(X[test_i])\n",
-    "        sqr_err += np.sum((pred - y[test_i]) ** 2)\n",
-    "        n_test += test_i.shape[0]\n",
-    "    mse[i] = sqr_err / n_test\n",
-    "best = np.argmin(mse) + 1\n",
-    "print(f\"best = {best}, MSE = {mse[best - 1]}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best K = 100, MSE = 2392.578654473684\n"
-     ]
-    }
-   ],
-   "source": [
-    "n_neighbors = np.zeros(100)\n",
-    "for i in range(n_neighbors.shape[0]):\n",
-    "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "    n_neighbors[i] = calc_MSE(neigh, region_validation_splits(dat, n_splits=5))\n",
-    "best = np.argmin(n_neighbors) + 1\n",
-    "print(f\"best K = {best}, MSE = {n_neighbors[best - 1]}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Regression Tree performance on region cross validation. It uses minimum samples per leaf\n",
-    "as a hyperparameter. This outputs the best min_sample_leaf and it's corresponding\n",
-    "mean squared error."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best min_samples_leaf = 28, MSE = 2277.33822027266\n"
-     ]
-    }
-   ],
-   "source": [
-    "leaf_samples = np.zeros(100)\n",
-    "for i in range(leaf_samples.shape[0]):\n",
-    "    tree = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
-    "    leaf_samples[i] = calc_MSE(tree, region_validation_splits(dat, n_splits=5))\n",
-    "best = np.argmin(leaf_samples) + 1\n",
-    "print(f\"best min_samples_leaf = {best}, MSE = {leaf_samples[best - 1]}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "KNN performance on time split validation. This outputs the best K and it's corresponding\n",
-    "mean squared error."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best K = 1, MSE = 972.1166666666667\n"
-     ]
-    }
-   ],
-   "source": [
-    "n_neighbors = np.zeros(200)\n",
-    "for i in range(n_neighbors.shape[0]):\n",
-    "    neigh = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "    n_neighbors[i] = calc_MSE(neigh, time_validation_split(dat, \"2020-08-10\"))\n",
-    "best = np.argmin(n_neighbors) + 1\n",
-    "print(f\"best K = {best}, MSE = {n_neighbors[best - 1]}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Regression Tree performance on time split validation. It uses minimum samples per leaf\n",
-    "as a hyperparameter. This outputs the best min_sample_leaf and it's corresponding\n",
-    "mean squared error."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best min_samples_leaf = 3, MSE = 1061.9392407407408\n"
-     ]
-    }
-   ],
-   "source": [
-    "leaf_samples = np.zeros(200)\n",
-    "for i in range(leaf_samples.shape[0]):\n",
-    "    tree = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
-    "    leaf_samples[i] = calc_MSE(tree, time_validation_split(dat, \"2020-08-10\"))\n",
-    "best = np.argmin(leaf_samples) + 1\n",
-    "print(f\"best min_samples_leaf = {best}, MSE = {leaf_samples[best - 1]}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "This is an attempt at using a model on the PCA-reduced dataset and ordinary 5-fold\n",
-    "cross validation is used."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best = 153, MSE = 2177.7346649930746\n"
-     ]
-    }
-   ],
-   "source": [
-    "pca = PCAPlotting(dat)\n",
-    "pca.reduce_dimensionality(new_dimension=2)\n",
-    "pca.add_hospitalized_new()\n",
-    "X = pca.reduced_data[:,:-1]\n",
-    "y = pca.reduced_data[:,-1]\n",
-    "kf = KFold(n_splits=5)\n",
-    "\n",
-    "mse = np.zeros(200)\n",
-    "for i in range(mse.shape[0]):\n",
-    "    sqr_err = 0\n",
-    "    n_test = 0\n",
-    "    for train_i, test_i in kf.split(X):\n",
-    "        # model = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "        model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
-    "        model.fit(X[train_i], y[train_i])\n",
-    "        pred = model.predict(X[test_i])\n",
-    "        sqr_err += np.sum((pred - y[test_i]) ** 2)\n",
-    "        n_test += test_i.shape[0]\n",
-    "    mse[i] = sqr_err / n_test\n",
-    "best = np.argmin(mse) + 1\n",
-    "print(f\"best = {best}, MSE = {mse[best - 1]}\")\n"
    ],
    "metadata": {
     "collapsed": false,
