- Optimal K and Consistency jypyter file

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -217,14 +217,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "def get_consistency(dimension, num_clusters):\n",
+    "    dataset = Data()\n",
+    "    dataset.filter_out_zeros()\n",
+    "    dataset.fill_na(0)\n",
+    "    symptoms = dataset.d.columns[8:-1]\n",
+    "    symptom_data = dataset.d.loc[:,symptoms].values\n",
+    "    symptom_data = StandardScaler().fit_transform(symptom_data)\n",
+    "\n",
+    "    kmeans_original = Kmeans(symptom_data)\n",
+    "    labels_original_dim = kmeans_original.find_clusters(num_clusters)\n",
+    "\n",
+    "    pca_data = PCAPlotting(dataset.d)\n",
+    "    reduced_xd = pca_data.reduce_dimensionality(dimension)\n",
+    "    kmeans_xd = Kmeans(reduced_xd)\n",
+    "    labels_x_dim = kmeans_xd.find_clusters(num_clusters)\n",
+    "\n",
+    "    consistency_xd = consistency(num_clusters, labels_original_dim, labels_x_dim)\n",
+    "    print(\"{ Percentage of points falling in the same cluster together again = \",\n",
+    "          consistency_xd[1], \"\\nwith dimensions reduced to \", dimension, \" and number of clusters = \",\n",
+    "          num_clusters, \" }\\n\\n\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/admin/COMP551/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3417: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "<ipython-input-22-a9afdaed9fda>:1: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(2, 18)\n",
+      "<ipython-input-22-a9afdaed9fda>:2: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(3, 18)\n",
+      "<ipython-input-22-a9afdaed9fda>:3: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(4, 18)\n"
      ]
     },
     {
@@ -241,48 +278,11 @@
     }
    ],
    "source": [
-    "dataset = Data()\n",
-    "dataset.filter_out_zeros()\n",
-    "dataset.fill_na(0)\n",
-    "symptoms = dataset.d.columns[8:-1]\n",
-    "symptom_data = dataset.d.loc[:,symptoms].values\n",
-    "symptom_data = StandardScaler().fit_transform(symptom_data)\n",
-    "num_clusters = 18\n",
+    "get_consistency(2, 18)\n",
+    "get_consistency(3, 18)\n",
+    "get_consistency(4, 18)\n",
     "\n",
-    "pca_data = PCAPlotting(dataset.d)\n",
-    "reduced_2d = pca_data.reduce_dimensionality(2)\n",
-    "\n",
-    "reduced_3d = pca_data.reduce_dimensionality(3)\n",
-    "\n",
-    "reduced_4d = pca_data.reduce_dimensionality(4)\n",
-    "\n",
-    "dim = 2\n",
-    "kmeans_original = Kmeans(symptom_data)\n",
-    "labels_original_dim = kmeans_original.find_clusters(num_clusters)\n",
-    "\n",
-    "kmeans2 = Kmeans(reduced_2d)\n",
-    "labels_2_dim = kmeans2.find_clusters(num_clusters)\n",
-    "\n",
-    "consistency2 = consistency(num_clusters, labels_original_dim, labels_2_dim)\n",
-    "print(\"{ Percentage of points falling in the same cluster together again = \",\n",
-    "      consistency2[1], \"\\nwith dimensions reduced to \", dim, \" and number of clusters = \",\n",
-    "                                                           num_clusters, \" }\")\n",
-    "dim = 3\n",
-    "kmeans3 = Kmeans(reduced_3d)\n",
-    "labels_3_dim = kmeans3.find_clusters(num_clusters)\n",
-    "\n",
-    "consistency3 = consistency(num_clusters, labels_original_dim, labels_3_dim)\n",
-    "print(\"{ Percentage of points falling in the same cluster together again = \",\n",
-    "      consistency3[1], \"\\nwith dimensions reduced to \", dim, \" and number of clusters = \",\n",
-    "                                                           num_clusters, \" }\")\n",
-    "dim = 4\n",
-    "kmeans4 = Kmeans(reduced_4d)\n",
-    "labels_4_dim = kmeans4.find_clusters(num_clusters)\n",
-    "\n",
-    "consistency4 = consistency(num_clusters, labels_original_dim, labels_4_dim)\n",
-    "print(\"{ Percentage of points falling in the same cluster together again = \",\n",
-    "      consistency4[1], \"\\nwith dimensions reduced to \", dim, \" and number of clusters = \",\n",
-    "                                                           num_clusters, \" }\")\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
