- Optimal K and Consistency jypyter file

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -250,37 +250,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-a9afdaed9fda>:1: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  get_consistency(2, 18)\n",
-      "<ipython-input-22-a9afdaed9fda>:2: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  get_consistency(3, 18)\n",
-      "<ipython-input-22-a9afdaed9fda>:3: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  get_consistency(4, 18)\n"
+      "<ipython-input-24-4c2ca46b6d10>:1: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(2, 15)\n",
+      "<ipython-input-24-4c2ca46b6d10>:2: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(3, 15)\n",
+      "<ipython-input-24-4c2ca46b6d10>:4: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(6, 15)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ Percentage of points falling in the same cluster together again =  84.53212457173706 \n",
-      "with dimensions reduced to  2  and number of clusters =  18  }\n",
-      "{ Percentage of points falling in the same cluster together again =  88.5685570584584 \n",
-      "with dimensions reduced to  3  and number of clusters =  18  }\n",
-      "{ Percentage of points falling in the same cluster together again =  80.97536869036134 \n",
-      "with dimensions reduced to  4  and number of clusters =  18  }\n"
+      "{ Percentage of points falling in the same cluster together again =  87.94508212349793 \n",
+      "with dimensions reduced to  2  and number of clusters =  15  }\n",
+      "{ Percentage of points falling in the same cluster together again =  81.57029460762202 \n",
+      "with dimensions reduced to  3  and number of clusters =  15  }\n",
+      "{ Percentage of points falling in the same cluster together again =  98.12032192044843 \n",
+      "with dimensions reduced to  6  and number of clusters =  15  }\n"
      ]
     }
    ],
    "source": [
-    "get_consistency(2, 18)\n",
-    "get_consistency(3, 18)\n",
-    "get_consistency(4, 18)\n",
+    "get_consistency(2, 15)\n",
+    "get_consistency(3, 15)\n",
+    "#Optimal number of PCs\n",
+    "get_consistency(6, 15)\n",
     "\n",
     "\n"
    ],
