- Optimal K and Consistency jypyter file

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -152,27 +152,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
-   "source": [
-    "def silhouette_method(x, kmax):\n",
-    "    sil = []\n",
-    "    for k in range(2, kmax + 1):\n",
-    "        print(k)\n",
-    "        kmeans = KMeans(n_clusters=k).fit(x)\n",
-    "        labels = kmeans.labels_\n",
-    "        sil.append(silhouette_score(x, labels, metric='euclidean'))\n",
-    "    return sil"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "outputs": [],
    "source": [
@@ -212,6 +191,39 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Methodology for consistency:\n",
+    "\n",
+    "    1) Get cluster \"labels\" or \"appartenance\" for each data point in high dimensions\n",
+    "       and low dimensions. Note that the number of clusters used in original dims and lower\n",
+    "       dims should be the same\n",
+    "    2) Divide the points into sublists based on their labels. We get two 2D lists with\n",
+    "       n sublists each, where n = number of clusters chosen. Call the two lists X and Y\n",
+    "    3) Find all the intersections Lij representing intersection of sublist Xi with sublist\n",
+    "       Yj for i,j = 1,2,...,n. We should be getting n x n intersections. This step is done since\n",
+    "       we are not guaranteed that label x in high dimensions correspond to the same label in lower dimension\n",
+    "    4) Pick the n largest intersection lengths from the n x n ones obtained by keeping track of Xi and Yj which\n",
+    "       were the sublists \"intersected\". We assume that Xi and Yj would be considered the \"same\" clusters since\n",
+    "       they have the largest intersection compared to the rest of the n x n intersection lengths\n",
+    "    5) We then have Lij = intersection of Xi (cluster i in high dims) and Yj (cluster Xi but in low dim) where Xi and Yj\n",
+    "       are considered the \"same clusters\" for the reason mentionned in 4)\n",
+    "    6) Compute Cij = (|Lij| / ((|Xi| + |Yj|)/2)) (where |x| is the cardinality of x), ie we are\n",
+    "       trying to find what proportion of the total number of datapoints in clusters Xi and Yj, the intersection represents.\n",
+    "       This gives the consistency percentage from Xi (original dims) to Yj (lower dims), ie how many points fall in the same\n",
+    "       cluster together again in lower dimensions\n",
+    "    7) This is repeated for all n largest intersections and their mean X is calculated. Therefore X represents the average\n",
+    "       number of points that fall together again in the same cluster when reduced to the lower dimension and hence gives\n",
+    "       an idea of how faithful is the clustering when visualized in lower dimensions"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
