- Optimal K and Consistency jypyter file

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -203,13 +203,16 @@
     "       and low dimensions. Note that the number of clusters used in original dims and lower\n",
     "       dims should be the same\n",
     "    2) Divide the points into sublists based on their labels. We get two 2D lists with\n",
-    "       n sublists each, where n = number of clusters chosen. Call the two lists X and Y\n",
+    "       n sublists each where one sublist represents one cluster containing all of its datapoints,\n",
+    "       (n = number of clusters chosen). Call the two lists X and Y\n",
     "    3) Find all the intersections Lij representing intersection of sublist Xi with sublist\n",
     "       Yj for i,j = 1,2,...,n. We should be getting n x n intersections. This step is done since\n",
     "       we are not guaranteed that label x in high dimensions correspond to the same label in lower dimension\n",
     "    4) Pick the n largest intersection lengths from the n x n ones obtained by keeping track of Xi and Yj which\n",
-    "       were the sublists \"intersected\". We assume that Xi and Yj would be considered the \"same\" clusters since\n",
-    "       they have the largest intersection compared to the rest of the n x n intersection lengths\n",
+    "       were the sublists \"intersected\". We assume now that Xi and Yj are the \"same\" clusters in different dimensions since\n",
+    "       they have the biggest intersection compared to the rest of the (n x n)-n intersections(sampled n largest). Even if they\n",
+    "       are not the same clusters per se they still give the idea \"same clustering/grouping\" of our datapoints and hence\n",
+    "       can be considered to be \"the same\"\n",
     "    5) We then have Lij = intersection of Xi (cluster i in high dims) and Yj (cluster Xi but in low dim) where Xi and Yj\n",
     "       are considered the \"same clusters\" for the reason mentionned in 4)\n",
     "    6) Compute Cij = (|Lij| / ((|Xi| + |Yj|)/2)) (where |x| is the cardinality of x), ie we are\n",
