- Optimal K and Consistency jypyter file

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -210,8 +210,8 @@
     "       we are not guaranteed that label x in high dimensions correspond to the same label in lower dimension\n",
     "    4) Pick the n largest intersection lengths from the n x n ones obtained by keeping track of Xi and Yj which\n",
     "       were the sublists \"intersected\". We assume now that Xi and Yj are the \"same\" clusters in different dimensions since\n",
-    "       they have the biggest intersection compared to the rest of the (n x n)-n intersections(sampled n largest). Even if they\n",
-    "       are not the same clusters per se they still give the idea \"same clustering/grouping\" of our datapoints and hence\n",
+    "       they have the biggest intersection compared to the rest of the (n x n)-n intersections(sampled n largest). Even if\n",
+    "       they are not the same clusters per se they still give the idea \"same clustering/grouping\" of our datapoints and hence\n",
     "       can be considered to be \"the same\"\n",
     "    5) We then have Lij = intersection of Xi (cluster i in high dims) and Yj (cluster Xi but in low dim) where Xi and Yj\n",
     "       are considered the \"same clusters\" for the reason mentionned in 4)\n",
