--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
@@ -33,16 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['US-AK' 'US-DC' 'US-DE' 'US-MT' 'US-ND' 'US-RI' 'US-SD' 'US-VT' 'US-WV'\n",
-      " 'US-WY']\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -57,7 +49,24 @@
     "data = Data()\n",
     "data.filter_low_data_regions(threshold=0.15)\n",
     "data.fill_na(0)\n",
+    "data.normalize_regions()\n",
     "dat = data.d"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# sympt = dat.iloc[:, 6:-1].median() == 0\n",
+    "# bad_sympt = sympt[sympt].index.values\n",
+    "# dat = dat.drop(columns=bad_sympt)"
    ],
    "metadata": {
     "collapsed": false,
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def region_validation_splits(d, n_splits=5):\n",
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def time_validation_split(d, split_date):\n",
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def calc_MSE(model, validation_sets):\n",
@@ -174,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best K = 100, MSE = 2392.578654473684\n"
+      "best K = 100, MSE = 2306.6143465789473\n"
      ]
     }
    ],
@@ -212,13 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best min_samples_leaf = 29, MSE = 2277.3073756455565\n"
+      "best min_samples_leaf = 28, MSE = 2258.1146108941984\n"
      ]
     }
    ],
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +287,7 @@
    "cell_type": "markdown",
    "source": [
     "Regression Tree performance on time split validation. It uses minimum samples per leaf\n",
-    "as a hyperparameter. This outputs the best min_sample_leaf and it's corresponding\n",
+    "as a hyper-parameter. This outputs the best min_sample_leaf and it's corresponding\n",
     "mean squared error."
    ],
    "metadata": {
@@ -287,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best min_samples_leaf = 3, MSE = 1021.7125046296296\n"
+      "best min_samples_leaf = 1, MSE = 1155.3\n"
      ]
     }
    ],
@@ -324,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best = 153, MSE = 2177.7346649930746\n"
+      "best = 193, MSE = 2230.5781958116854\n"
      ]
     }
    ],
@@ -347,8 +356,8 @@
     "    sqr_err = 0\n",
     "    n_test = 0\n",
     "    for train_i, test_i in kf.split(X):\n",
-    "        # model = KNeighborsRegressor(n_neighbors=i+1)\n",
-    "        model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
+    "        model = KNeighborsRegressor(n_neighbors=i+1)\n",
+    "        # model = DecisionTreeRegressor(min_samples_leaf=i+1)\n",
     "        model.fit(X[train_i], y[train_i])\n",
     "        pred = model.predict(X[test_i])\n",
     "        sqr_err += np.sum((pred - y[test_i]) ** 2)\n",
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stderr",
