- Normalize regions added

--- a/optimal_num_clusters.ipynb
+++ b/optimal_num_clusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "from sklearn.metrics import pairwise_distances_argmin, silhouette_score\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def elbow_graphs(data, dimension):\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def intersect(a, b):\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_consistency(dimension, num_clusters):\n",
@@ -267,18 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-4c2ca46b6d10>:1: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-12-22d630f8b7fb>:1: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  get_consistency(2, 15)\n",
-      "<ipython-input-9-4c2ca46b6d10>:2: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-12-22d630f8b7fb>:2: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  get_consistency(3, 15)\n",
-      "<ipython-input-9-4c2ca46b6d10>:4: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  get_consistency(6, 15)\n"
+      "<ipython-input-12-22d630f8b7fb>:4: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(6, 15)\n",
+      "<ipython-input-12-22d630f8b7fb>:5: DtypeWarning: Columns (15) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  get_consistency(119, 15)\n"
      ]
     },
     {
@@ -296,6 +298,10 @@
       "{ Percentage of points falling in the same cluster together again =  68.71168467386953 \n",
       "with dimensions reduced to  6  and number of clusters =  15  }\n",
       "\n",
+      "\n",
+      "{ Percentage of points falling in the same cluster together again =  100.0 \n",
+      "with dimensions reduced to  119  and number of clusters =  15  }\n",
+      "\n",
       "\n"
      ]
     }
@@ -305,6 +311,8 @@
     "get_consistency(3, 15)\n",
     "#Optimal number of PCs\n",
     "get_consistency(6, 15)\n",
+    "#Original dimensions\n",
+    "get_consistency(119, 15)\n",
     "\n",
     "\n"
    ],
