--- a/symptoms_pop.ipynb
+++ b/symptoms_pop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "class SymptomPopularity:\n",
@@ -50,8 +50,8 @@
     "            counter += 1\n",
     "            if counter > 3:\n",
     "                counter = 0\n",
-    "\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "        plt.savefig(\"pop.jpg\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stderr",
@@ -110,6 +110,13 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<Figure size 432x288 with 0 Axes>"
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
