-Final (final) version Saksham

--- a/symptoms_pop.ipynb
+++ b/symptoms_pop.ipynb
@@ -50,8 +50,7 @@
     "            counter += 1\n",
     "            if counter > 3:\n",
     "                counter = 0\n",
-    "        plt.show()\n",
-    "        plt.savefig(\"pop.jpg\")"
+    "        plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -110,13 +109,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<Figure size 432x288 with 0 Axes>"
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
